[package]
name = "wasm_hex_dump"
version = "0.1.0"
edition = "2021"
authors = ["danbugs"]
description = "A CLI tool to convert Wasm files to hexadecimal dumps for libSQL UDFs."
repository = "https://github.com/danbugs/wasm_hex_dump"
homepage = "https://github.com/danbugs/wasm_hex_dump#readme"
documentation = "https://github.com/danbugs/wasm_hex_dump#readme"
keywords = ["wasm", "hex", "dump", "cli", "libSQL"]
categories = ["command-line-utilities", "wasm"]
license = "AGPL-3"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
hex = "0.4"
